--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ header {
 
 
 #codeArea {
-    overflow:scroll;
+    overflow-y:scroll;
+    overflow-wrap: break-word;
     height: 70vh;
     font-size: 1em;
     padding: 0px 0px 10px 15px;
