--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
 #codeArea {
     overflow-y:scroll;
     overflow-wrap: break-word;
-    height: 70vh;
+    height: 65vh;
     font-size: 1em;
     padding: 0px 0px 10px 15px;
 }
@@ -52,20 +52,53 @@ header {
 }
 
 .example {
-    font-size: 0.9em;
-    width: max(900px, 100vw);
-    table-layout: auto;
-    overflow: scroll;
+    white-space: nowrap;
+    font-size: 1em;
     padding: 0px 5px;
     border-left: 3px solid black;
+
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: flex-start;
+    -ms-flex-item-align: start;
+    align-self: flex-start;
+}
+.no-border {
+    border: none;
 }
 
+
 footer {
-    font-size: 0.8em;
-    min-width: 1000px;
+    width: 100%;
+    font-size: 1em;
     padding: 5px;
     background-color: rgb(200, 200, 200, 0.5);
     flex: 2;
+}
+
+.footer-container {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: space-around;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
 }
 code {
     background-color:  none;
