--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a.link:hover {
 #editor {
     flex: 1;
     height: 100%;
-    width: 60vw;
+    width: 100vw;
     font-size: 14px;
 }
 
@@ -115,6 +115,7 @@ a.link:hover {
     padding-left: 5px;
     border-left: 2px solid grey !important; 
     flex: 1 1;
+    display: none;
 }
 
 .example {
